# Vectras-VM-Android

./: .firebaserc  .gitattributes  .gitignore  CONTRIBUTING.md  HISTORY_IMPACT_REPORT.md  HISTORY_REWRITE_CHECKLIST.md  README.md  RELEASE_NOTES_DRAFT.md  build.gradle  gradle.properties  settings.gradle  vectras.jks
.github/: release-drafter.yml
.github/PULL_REQUEST_TEMPLATE/: history-rewrite-followup.md
.github/docs/: release-drafter-act.md
.github/events/: pull_request_closed_merged.json
.github/workflows/: android.yml  build-sign-apk.yml  deprecated-scan.yml  env-check.yml  firmware-ci.yml  history-size-estimation.yml  release-drafter.yml  upload-keystore.yml
.idx/: dev.nix
app/: build.gradle  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/roms/: firmware-inventory.json
app/src/main/res/layout/: activity_cqcm.xml  activity_custom_rom.xml  activity_edit.xml  activity_export_rom.xml  activity_external_vnc_settings.xml  activity_google_sign_in.xml  dev_dialog.xml  (+24 more)
buildSrc/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: check-env.ps1  check-env.sh  ci-verify-no-lfs-pointers.sh  estimate-post-rewrite-size.ps1  history-estimate.sh  history-impact-report.ps1  history-rewrite-plan.md  paths-to-remove.txt  publish-firmware.sh  run-history-rewrite.ps1  run-history-rewrite.sh  verify-firmware-sha.ps1  verify-firmware-sha.sh
shell-loader/: build.gradle
shell-loader/stub/: build.gradle
terminal-emulator/: build.gradle
terminal-emulator/src/main/cpp/: CMakeLists.txt  README.md  termux.c
terminal-view/: build.gradle
(+57 files in other folders)
